# CppMakowetska

./: 0  Angle3D_Makowetska.h  Book.java  Bouquet.java  Button.java  CMakeLists.txt  Coffee.java  Cylindric.h  Dot.java  Edition.java  Encyclopedia.java  Figure3D_Makowetska.cpp  Figure3D_Makowetska.h  Figure3D_test.cpp  Flower.java  Fraction.java  Interval.java  Main.java  Matrix.cpp  Matrix.h  Pedal.java  Piano.java  Plant.java  Point3D_Makowetska.cpp  Point3D_Makowetska.h  Point3D_test.cpp  Polinom.java  QuadraticEquation.java  Quaternion_Makowetska.cpp  Quaternion_Makowetska.h  Quaternion_test.cpp  README.md  Ratio.cpp  Ratio.h  Ratio2.cpp  Sentence.java  Spheric.h  Text.java  Vector.cpp  Vector3D.h  (+85 more)
